# cf-cockpit

./: .gitignore  cli.py  coreconf-m2m@2026-03-08.sid  coreconf-m2m@2026-03-08.yang  coreconf-m2m@2026-03-16.sid  coreconf-m2m@2026-03-16.yang  coreconf-m2m@2026-03-22.sid  coreconf-m2m@2026-03-22.yang  influx_viewer.py  main.py  pyproject.toml
tests/: test_stats_parsing.py
