[project]
name = "cockpit2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocoap>=0.4.17",
    "cbor2>=5.8.0",
    "pycoreconf",
    "textual>=0.50.0",
]

[tool.uv.sources]
pycoreconf = { git = "https://github.com/ltn22/pycoreconf.git", rev = "findSID" }
