[project]
name = "cockpit2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiocoap>=0.4.17",
    "cbor2>=5.8.0",
    "pycoreconf",
]

[tool.uv.sources]
pycoreconf = { git = "https://github.com/ltn22/pycoreconf.git", rev = "findSID" }
